--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -1,8 +1,15 @@
 body {
   padding-top: 70px;
   padding-bottom: 70px;
-  background-color: #efefef;
-  font-family: "Times New Roman", serif;
+  background-color: #ffffff;
+	color: #414141;
+	font-family: 'Roboto Slab', serif;
+}
+body a,
+body a:hover,
+body a:visited,
+body a:active {
+	color: #414141;
 }
 [data-current-template="about"].pw-container.pw-width,
 [data-current-template="credits"].pw-container.pw-width {
@@ -61,9 +68,10 @@ article p {
   padding-left: 0px;
 }
 nav.navbar {
-  color: #000;
-  background-color: #fff;
-  font-family: "LinLibertine", "Times New Roman", serif;
+	border: 0;
+  background-color: #a4a4a4;
+  color: #fff;
+  font-family: "Raleway", serif;
   font-size: 18px;
 }
 nav.navbar a.navbar-brand {
@@ -89,8 +97,8 @@ nav.navbar li > a {
 nav.navbar .navbar-nav > .active > a,
 nav.navbar .navbar-nav .active > a:focus,
 nav.navbar .navbar-nav .active > a:hover {
-  background-color: #fff;
-  color: #333;
+	background-color: inherit;
+  color: #f2f2f2;
 }
 
 .book {
@@ -99,11 +107,16 @@ nav.navbar .navbar-nav .active > a:hover {
   background-color: white;
 }
 .book .book-data {
-  padding: 10px;
+  padding: 5px 10px;
+}
+.book-thumb {
+	height: 0;
+	padding-bottom: 56.25%;
+	overflow: visible;
 }
 .book img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   background-color: white;
 }
 @media screen and (max-width: 481px) {
