re-add pw about page

--- a/www/about.js.tmpl
+++ b/www/about.js.tmpl
@@ -2,13 +2,119 @@
 	<div class="row">
 		<div class="col-md-7">
 			<div class="about-img">
-				<img data-src="https://i.ytimg.com/vi/RgjjqAJxSgk/mqdefault.jpg" />
+				<img data-src="img/Mandiberg-LiveStudy-Screenshot01.jpg" />
 			</div>
 		</div>
 	</div>
 	<p>
-	<i>About</i><br />
-	This is where an About page would go.
+	<i>From Aaaaa! to ZZZap!</i><br />
+	an exhibition by Michael Mandiberg<br />
+	at Denny Gallery, 261 Broome St.<br />
+	featuring work from the <i>Print Wikipedia</i> series<br />
+	June 18 to July 11th, 2015<br />
+	opening June 18th, 6-8PM
 	</p>
+	<p>To learn more or place an order, please visit <a
+	href="http://printwikipedia.lulu.com">printwikipedia.lulu.com</a>.</p>
+
+	<div class="row">
+	<div class="col-md-7">
+	<p>
+	<i>Print Wikipedia</i> is a both a utilitarian visualization of the
+	largest accumulation of human knowledge and a poetic gesture
+	towards the futility of the scale of big data. Mandiberg has
+	written software that parses the entirety of the English-language
+	Wikipedia database and programmatically lays out thousands of
+	volumes, complete with covers, and then uploads them for
+	print-on-demand. Built on what is likely the largest
+	appropriation ever made, it is also a work of found poetry that
+	draws attention to the sheer size of the encyclopedia’s content
+	and the impossibility of rendering Wikipedia as a material object
+	in fixed form: Once a volume is printed it is already out of
+	date. The work is also a reflection on the actual transparency or
+	completeness of knowledge containers and history.
+	</p>
+	<p>
+	The exhibition at Denny Gallery will be the performance of the
+	upload of <i>Print Wikipedia</i> to <a
+		href="http://lulu.com">Lulu.com</a> (a print-on-demand
+	website), and exhibition of a selection of volumes from the
+	project. The upload process will take between eleven and fourteen
+	days, during which time, the upload process will be on continuous
+	view. In addition, the gallery will remain open around the clock
+	through the first weekend of the exhibition, in recognition that
+	the computer itself works continuously. There will be two
+	channels for watching this process: a projection of the Lulu.com
+	site in a web browser and a computer monitor with the command
+	line updates showing the dialogue between the code and the site.
+	The script will also post to Twitter after it finishes each
+	volume. Individual volumes and the entirety of <i>Print
+		Wikipedia</i>,
+	<i>Wikipedia Table of Contents</i>, and <i>Wikipedia Contributor
+		Appendix</i>
+	will be available for sale. The build and upload process will
+	take place in real time; until this process begins, exact metrics
+	for the scale of the work can only be estimated.
+	</p>
+	<p>
+	Michael Mandiberg is an interdisciplinary artist, scholar, and
+	educator living in Brooklyn, New York. He received his M.F.A.
+	from the California Institute of the Arts and his B.A. from Brown
+	University. His work traces the lines of political and symbolic
+	power online, working on the Internet in order to comment on and
+	intercede in the real flows of information. He sold all of his
+	possessions online on <i>Shop Mandiberg</i>, made perfect copies of
+	copies on <i><a
+			href="http://aftersherrielevine.com">AfterSherrieLevine.com</a></i>, and created Firefox plugins
+	that highlight the real environmental costs of a global economy
+	on <i><a href="http://therealcosts.com">TheRealCosts.com</a></i>.
+	He is co-author of <i>Digital Foundations</i> and
+	<i>Collaborative Futures</i> and the editor of <i>The Social
+		Media Reader</i>.
+	A recipient of residencies and commissions from Eyebeam,
+	Rhizome.org, and Turbulence.org, his work has been exhibited at
+	the New Museum, Ars Electronica, ZKM, and Transmediale. A former
+	Senior Fellow at Eyebeam, he is currently Director of the New
+	York Arts Practicum, a co-founder of the Art+Feminism Wikipedia
+	Edit-a-thon, Associate Professor at the College of Staten
+	Island/CUNY and a member of the Doctoral Faculty at the CUNY
+	Graduate Center. His work has previously been exhibited at Denny
+	Gallery in the exhibition <i>Share This! Appropriation After
+		Cynicism</i>. He has also exhibited at Postmasters Gallery, The New
+	Museum for Contemporary Art, the Center for Art and Media
+	Karlsruhe, Jen Beckman Gallery, Parsons’ Sheila C. Johnson Design
+	Center, and the Eyebeam Art + Technology Center. His work has
+	been written about in <i>The New York Times</i>, the <i>Los
+		Angeles Times</i>,
+	<i>Berliner Zeitung</i>, <i>Wired</i>, the <i>Wall Street
+		Journa</i>l, <i>New York
+		Magazine</i>, <i>Hyperallergic</i>, <i>ARTNews</i>,
+	<i>MOMUS</i>, <i>Flash Art</i> and <i>Artforum</i>.
+	</p>
+	<p>
+	The exhibition has been generously supported by <a
+		href="http://lulu.com">Lulu.com</a>, the
+	publishing platform used by Michael Mandiberg for <i>Print
+		Wikipedia</i>. Denny Gallery and Michael Mandiberg would also like to
+	thank the Wikimedia Foundation, The Banff Centre and Eyebeam for
+	their support of the exhibition.
+	</p>
+	<div class="panel panel-default">
+		<div class="panel-body">
+			<a href="#/credits">Credits</a>
+		</div>
+	</div>
+	</div> <!-- /.col-lg-7 -->
+	<div class="sidebar-images col-md-5">
+		<div class="about-img">
+			<img data-src="img/Mandiberg-LiveStudy-Screenshot02.jpg" />
+		</div>
+		<div class="about-img">
+			<img data-src="img/Mandiberg-LiveStudy-Screenshot03.jpg" />
+		</div>
+		<div class="about-img">
+			<img data-src="img/Mandiberg-LiveStudy-Screenshot04.jpg" />
+		</div>
+	</div>
 	</div> <!-- /.row-fluid -->
 </article>
