--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -77,7 +77,8 @@ nav.navbar {
 nav.navbar a.navbar-brand {
   color: #000;
 }
-nav.navbar li > a {
+nav.navbar .navbar-nav>li > a {
+  color: #414141;
   padding-left: 20px;
   padding-right: 10px;
 }
